# perf-tests

./: .gitignore  .golangci.yml  .travis.yml  Makefile  OWNERS  OWNERS_ALIASES  README.md  RELEASE.md  SECURITY_CONTACTS  code-of-conduct.md  go.mod  run-e2e-with-prometheus-fw-rule.sh  run-e2e.sh  test.go  test_dsjl
.claude/skills/: SKILL.md
.github/: .dependabot.yaml  PULL_REQUEST_TEMPLATE.md  clusterloader2-release.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement.md  failing-test.md
.github/workflows/: clusterloader2-release.yml  docker-build-push-wireguard.yml  docker-publish-nptest.yml
_hook/: pre-push
_logviewer/: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
_logviewer/example/: README.md
_logviewer/example/protos/: BUILD.bazel  test.proto
_logviewer/example/protos2/: BUILD.bazel  test2.proto
_logviewer/mixer/: BUILD.bazel  main.go  mixer_test.go
_logviewer/mixer-client/: BUILD.bazel  main.go
_logviewer/mixer/request/: BUILD.bazel  request.proto
_logviewer/worker/: BUILD.bazel  main.go  parsing_test.go
_logviewer/worker/work/: BUILD.bazel  work.proto
adhoc/: README.md  run-e2e-test.sh
adhoc/log/: distributed-provisioning.md
appbench/: OWNERS  README.md
application-benchmarks/: OWNERS  README.md
application-benchmarks/k8s-postgresql-benchmark/: README.md  postgresql.yaml  variables.yaml
benchmark/: Dockerfile  Makefile  OWNERS  README.md  go.mod  go.sum  runner.sh
benchmark/Godeps/: Godeps.json
benchmark/cmd/: benchmark.go
benchmark/docs/: design.md
clusterloader/: README.md  cluster_loader.go  e2e.go  e2e_test.go  glide.yaml  run-e2e.sh
clusterloader/Godeps/: Godeps.json
clusterloader/config/: logger.yaml  rcpod.yaml  rctest.yaml  test.yaml
clusterloader/content/: pod-logger.json  pod-pause.json  rc-pod.json
clusterloader/doc/: README_logging.md
clusterloader/docs/: README_logging.md  design.md  vision.md
clusterloader/e2e/: e2e_test.go
clusterloader/framework/: context.go  pod_utils.go  rc_utils.go  tuning_utils.go  util.go
clusterloader2/: Dockerfile  Makefile  OWNERS  README.md  clean-up-old-snapshots-boskos.sh  clean-up-old-snapshots.sh  go.mod  go.sum  run-e2e.sh  wait-for-jobs.sh
clusterloader2/api/: default.go  extensions.go  types.go  validation.go  validation_test.go
clusterloader2/cmd/: clusterloader.go  clusterloader_test.go
clusterloader2/docs/: DEVELOPING_MEASUREMENT.md  GETTING_STARTED.md  create-new-test.md  design.md  experiments.md  oom_detection.md  test_suite_design.md
clusterloader2/drivers/: csi-azuredisk-controller.yaml  csi-azuredisk-driver.yaml  csi-azuredisk-node-windows-hostprocess.yaml  csi-azuredisk-node.yaml  gcp-csi-driver-stable.yaml
clusterloader2/examples/: chaos_monkey_example.yaml  generic_query_example.yaml
clusterloader2/framework/: framework.go
compare/: Makefile
compare/Godeps/: Godeps.json
compare/src/: compare-logs.go  compare-logs_test.go  compare-metrics.go  compare-metrics_test.go  compare-resources.go  compare-resources_test.go  scraper.go  scraper_test.go
dns/: Makefile  OWNERS  README.md  pylintrc  run
dns/cluster/: coredns-configmap.yaml  coredns-deployment.yaml  coredns-service.yaml  dnsperf-deploy.yaml  dnsperf.yaml  kube-dns-deployment.yaml  kube-dns-service.yaml  prometheus.yaml  testsvc.yaml
dns/dnsperfgo/: Dockerfile  Makefile  README.md  deployment-inclusternames.yaml  deployment.yaml  go.mod  go.sum  main.go  metrics.go  queries-cm.yaml
dns/fixtures/: raw.txt
dns/image/: Dockerfile.build  Dockerfile.image  Dockerfile.runner  Makefile  README.md  histogram.patch
dns/jsonify/: go.mod  go.sum  main.go
dns/perf/: .gitignore  Makefile  README.md  ingest  pylintrc
dns/py/: data.py  data_test.py  ingest.py  params.py  params_test.py  report.py  requirements.txt  run_perf.py  runner.py
dns/queries/: all-queries.txt  multiple-svc.txt  nx-domain.txt  outside.txt  service.txt
dns/report_queries/: 99th_percentile_latency_with_cache.sql  99th_percentile_latency_without_cache.sql  avg_time_per_query_file.sql  min_max_99th_percentile_latency.sql  overview.sql  runs_less_20ms_95th_percentile.sql
dns/sql/: maximum-99-percentile-without-dnsmasq-cache.sql  min-kubedns-cpu-for-latency.sql
docs/: new-measurement.md
fuzzer/: README.md  fuzzer.go  fuzzer_test.go  go.mod  go.sum
fuzzer/cmd/: main.go
golang/: Makefile  OWNERS  build-go.sh  build-kubernetes.sh  push.sh  run-e2e.sh
kubeadm/: README.md  checkin_account.py  checkout_account.py  ci-e2e.sh  create-cluster.sh  heartbeat_account.py  setup.sh  startup-cp  startup-worker
logviewer/: OWNERS
network/: OWNERS  go.mod
network/Godeps/: Godeps.json
perfdash/: .gitignore  Dockerfile  Makefile  OWNERS  README.md  config.go  deploy.sh  deployment.yaml  downloader.go  gcs_metrics_bucket.go  github-configs-fetcher.go  go.mod  go.sum  google-gcs-downloader.go  local_metrics_dir.go  metrics-downloader-helper.go  metrics-downloader.go  parser.go  parser_test.go  perfdash-service.yaml  perfdash.go  pod_names.go  pod_names_test.go  s3_metrics_bucket.go  s3_metrics_bucket_test.go
perfdash/Godeps/: Godeps.json
perfdash/test/: azure.yaml  jobs.yaml
perfdash/www/: Chart.js  index.html  script.js
perflens/: README.md  go.mod  go.sum
perflens/docker/: docker-compose.yml
probes/: Dockerfile  Makefile  OWNERS  go.sum
probes/cmd/: main.go
probes/common/: prometheus.go
probes/dns-probe/: Dockerfile  Makefile  go.mod  go.sum
probes/ping-probe/: go.mod
slo-monitor/: Dockerfile  Makefile  OWNERS  README.md  binding.yaml  go.mod  go.sum  role.yaml  serviceaccount.yaml  slo-monitor-deployment.yaml  slo-monitor-pod.yaml  slo-monitor-service.yaml
slo-monitor/Godeps/: Godeps.json
util-images/: Makefile  README.md  cloudbuild.yaml  presubmit.sh
util-images/access-tokens/: Dockerfile  Makefile  README.md  go.mod  go.sum
util-images/network/: go.mod
verify/: go-build.sh  install-verify-tools.sh  test.sh  verify-boilerplate.sh  verify-dashboard-format.sh  verify-flags-underscore.py  verify-gofmt.sh  verify-golint.sh  verify-lint.sh
(+1006 files in other folders)
