load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/perf-tests/logviewer/mixer-client",
    visibility = ["//visibility:private"],
    deps = [
        "//mixer/request:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "mixer-client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
