load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/perf-tests/logviewer/mixer",
    visibility = ["//visibility:private"],
    deps = [
        "//mixer/request:go_default_library",
        "//worker/work:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_google_cloud_go//storage:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "mixer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["mixer_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//worker/work:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
    ],
)
