load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "gcsreader.go",
        "main.go",
        "parsing.go",
    ],
    importpath = "k8s.io/perf-tests/logviewer/worker",
    visibility = ["//visibility:private"],
    deps = [
        "//worker/work:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_klauspost_pgzip//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@io_k8s_klog//:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "worker",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["parsing_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//worker/work:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
    ],
)
