load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "work_proto",
    srcs = ["work.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "work_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "k8s.io/perf-tests/logviewer/worker/work",
    proto = ":work_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":work_go_proto"],
    importpath = "k8s.io/perf-tests/logviewer/worker/work",
    visibility = ["//visibility:public"],
)
